--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Creating new branch </h1>
     <h1>Merging Branches</h1>
     <img src="ka.jpg" alt="">
+    <img src="ml.jpg" alt="">
 </body>
 </html>
