--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>Creating new branch </h1>
     <h1>Merging Branches</h1>
+    <div>
+        <h3>New Blog</h3>
+        <h5>Look mama, i can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure temporibus tenetur enim ea, deleniti reiciendis cumque voluptatibus minus quis officia necessitatibus quos eligendi asperiores atque eum. Tenetur consequatur quae, doloremque, maiores sapiente error porro ipsam ex omnis qui mollitia accusantium.</p>
+    </div>
     <img src="ka.jpg" alt="">
     <img src="ml.jpg" alt="">
 </body>
