--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Merging Branches</h1>
     <div>
         <h3>New Blog</h3>
-        <h5>Look mama, i can write a blog</h5>
+        <h5>Look mama jaan, i can write a blog. I love you!</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure temporibus tenetur enim ea, deleniti reiciendis cumque voluptatibus minus quis officia necessitatibus quos eligendi asperiores atque eum. Tenetur consequatur quae, doloremque, maiores sapiente error porro ipsam ex omnis qui mollitia accusantium.</p>
     </div>
     <img src="ka.jpg" alt="">
