--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
         <h3>New Blog</h3>
         <p>This paragraph for git pull practice</p>
+        <p>Again push after pull</p>
         <h5>Look mama jaan, i can write a blog. I love you!</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure temporibus tenetur enim ea, deleniti reiciendis cumque voluptatibus minus quis officia necessitatibus quos eligendi asperiores atque eum. Tenetur consequatur quae, doloremque, maiores sapiente error porro ipsam ex omnis qui mollitia accusantium.</p>
     </div>
